--- a/reasearch.html
+++ b/reasearch.html
@@ -54,7 +54,7 @@
     
     <footer>
         <a>Follow us on Instagram to know more about us ----></a>
-        <button class="button"><span><a href="https://www.instagram.com/lifestyle._.changes/">Click here!</a></span></button>
+        <button class="button" style="vertical-align:middle;"><span><a href="https://www.instagram.com/lifestyle._.changes/">Click here!</a></span></button>
     </footer>
 </body>
 </html>
