--- a/reasearch.html
+++ b/reasearch.html
@@ -53,7 +53,7 @@
 
     
     <footer>
-        <a>Follow us on Instagram to know more about us ---></a>
+        <a>Follow us on Instagram to know more about us &#129034;</a>
         <button class="button" style="vertical-align:middle;"><span><a href="https://www.instagram.com/lifestyle._.changes/">Click here!</a></span></button>
     </footer>
 </body>
