--- a/aboutus.html
+++ b/aboutus.html
@@ -30,25 +30,25 @@
             on a global issue that we  believe is critical to our world today. </p>
 <br>
         <h1>Our Team</h1>
-        <ul style="font-size: large;">
-            <li>Darshil Prajapati - Web Designer</li>
-            <li>Pari Gada - </li>
-            <li>Pearl Gothi - </li>
-            <li>Riya Doshi - </li>
-            <li>Aarav Kanekar - </li>
+        <ul style="font-size: 20px; line-height: 25px;">
+            <li>Darshil Prajapati - Web Designer, Poster Design, Survey, Research</li>
+            <li>Pari Gada - Survey, Social Media Planning, Research</li>
+            <li>Pearl Gothi - Social Media Handler, Research</li>
+            <li>Riya Doshi - Social Media Handler, Research</li>
+            <li>Aarav Kanekar - Interview, Research</li>
         </ul>
+        <p></p>
 <br>
         <h1>Why This Topic?</h1>
         <p></p>
-<br>
-        <h1>Our School and Curriculum</h1>
-        <p></p>
+
 <br>
         <h1>Acknowledgements</h1>
         <p>We would like to express our gratitude to our teacher, Ms. Shraddha Sharma, for her 
             guidance and support throughout this project. We would also like to thank the experts 
             and organizations who provided valuable insights and data for our research. Lastly, we 
-            appreciate the feedback and encouragement from our families and peers</p>
+            appreciate the feedback and encouragement from our families and peers who have supported 
+            us to make this project possible.</p>
 
     </section>
 
