--- a/reasearch.html
+++ b/reasearch.html
@@ -60,7 +60,7 @@
         <h1>Examples of Values and Beliefs in Practice</h1>
         <ol>
             <li>Family Values
-                <ul style="font-size: 20px">
+                <ul style="font-size: 20px; list-style-type: disc;">
                 <li>Loyalty and Devotion: Supporting and caring for family members.</li>
                 <li>Respect for Elders: Honoring family traditions and wisdom.</li>
                 <li>Open Communication: Resolving conflicts and sharing emotions.</li>
