--- a/reasearch.html
+++ b/reasearch.html
@@ -60,7 +60,7 @@
         <h1>Examples of Values and Beliefs in Practice</h1>
         <ol>
             <li>Family Values
-                <ul style="font-size: 20px; list-style-type: disc;">
+                <ul style="font-size: 20px">
                 <li>Loyalty and Devotion: Supporting and caring for family members.</li>
                 <li>Respect for Elders: Honoring family traditions and wisdom.</li>
                 <li>Open Communication: Resolving conflicts and sharing emotions.</li>
@@ -68,6 +68,50 @@
                 <li>Education and Hard Work: Encouraging learning and responsibility.</li>
                 <li>Core Ethics: Honesty, integrity, kindness, and providing a nurturing environment.</li>
             </ul>
+            </li>
+            <li>Global Beliefs and Superstitions
+                <ul style="list-style-type: lower-alpha;">
+                    <li>"Knocking on Wood"
+                        <ul>
+                            <li>Origins: Indo-European/Celtic belief in spirits residing in trees.</li>
+                            <li>Interpretations: Protection or invoking spirits for blessings.</li>
+                        </ul>
+                    </li>
+                    <li>"Throwing Salt Over Shoulder"
+                        <ul>
+                            <li>Origins: Ancient Roman/Christian practice to ward off evil.</li>
+                            <li>Symbolism: Derived from association of spilled salt with bad luck, as depicted in "The Last Supper."</li>
+                        </ul>
+                    </li>
+                    <li>"Walking Under Stairs"
+                        <ul>
+                            <li>Origins: European/Egyptian traditions tied to Christian symbolism.</li>
+                            <li>Belief: Walking under a ladder disrupts the sacred triangle of the Holy Trinity.</li>
+                        </ul>
+                    </li>
+                    <li>"Stepping on Cracks"
+                        <ul>
+                            <li>Origins: African/European folklore associating cracks with bad luck.</li>
+                            <li>Meaning: Symbolizes harm or misfortune, often tied to family.</li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li>Consequences of Changing Values and Beliefs
+                <ul style="list-style-type: lower-alpha;">
+                    <li>Impact on Relationships
+                        <ul>
+                            <li>Shared principles foster community and belonging.</li>
+                            <li>Conflicting values can cause misunderstandings and conflicts.</li>
+                        </ul>
+                    </li>
+                    <li>Impact on Social Status and Opportunities
+                        <ul>
+                            <li>Beliefs shape interactions, career choices, and responses to societal expectations.</li>
+                            <li>Negative or positive outlooks influence perceptions of work ethics and personal integrity.</li>
+                        </ul>
+                    </li>
+                </ul>
             </li>
         </ol>
 
