--- a/reasearch.html
+++ b/reasearch.html
@@ -70,7 +70,7 @@
             </ul>
             </li>
             <li>Global Beliefs and Superstitions
-                <ul style="list-style-type: lower-alpha;">
+                <ul style="list-style-type: lower-alpha; line-height: 40px;">
                     <li>"Knocking on Wood"
                         <ul>
                             <li>Origins: Indo-European/Celtic belief in spirits residing in trees.</li>
@@ -98,7 +98,7 @@
                 </ul>
             </li>
             <li>Consequences of Changing Values and Beliefs
-                <ul style="list-style-type: lower-alpha;">
+                <ul style="list-style-type: lower-alpha; line-height: 40px;">
                     <li>Impact on Relationships
                         <ul>
                             <li>Shared principles foster community and belonging.</li>
