--- a/aboutus.html
+++ b/aboutus.html
@@ -29,7 +29,7 @@
             This website represents the result of months of research, discussion and teamwork focusing 
             on a global issue that we  believe is critical to our world today. </p>
 <br>
-        <h1>Our Team</h1>
+        <h1>Our Team & Contributions</h1>
         <ul style="font-size: 20px; line-height: 25px;">
             <li>Darshil Prajapati - Web Designer, Poster Design, Survey, Research</li>
             <li>Pari Gada - Survey, Social Media Planning, Research</li>
