--- a/aboutus.html
+++ b/aboutus.html
@@ -37,10 +37,20 @@
             <li>Riya Doshi - Social Media Handler, Research</li>
             <li>Aarav Kanekar - Interview, Research</li>
         </ul>
+        
         <p></p>
 <br>
         <h1>Why This Topic?</h1>
-        <p></p>
+        <p>We chose this topic because while surfing the internet one of our team members found out that 
+            there are a lot of beliefs that have been followed from generations and are being passed on to 
+            the future. After that, we got the opportunity to find out more about it by the help of this 
+            project. We all have had some beliefs and superstitions that have been passed on to us but 
+            some of us didn't even know what they meant. So, we wanted to find out more about it and 
+            share our findings with the world. We also wanted to know how these beliefs have changed 
+            over time and how they have been adapted to modern lifestyles. We believe that understanding 
+            these changes can help us appreciate the importance of preserving cultural heritage while 
+            embracing modern advancements.
+        </p>
 
 <br>
         <h1>Acknowledgements</h1>
