--- a/aboutus.html
+++ b/aboutus.html
@@ -54,7 +54,7 @@
 
 <br>
         <h1>Acknowledgements</h1>
-        <p>We would like to express our gratitude to our teacher, Ms. Shraddha Sharma, for her 
+        <p>We would like to express our gratitude to our teacher, Ms. Shraddha Bajpai, for her 
             guidance and support throughout this project. We would also like to thank the experts 
             and organizations who provided valuable insights and data for our research. Lastly, we 
             appreciate the feedback and encouragement from our families and peers who have supported 
