--- a/aboutus.html
+++ b/aboutus.html
@@ -23,7 +23,7 @@
     <section>
         
         <h1>About Us</h1>
-        <p>Welcome to the official website of Team 11 from SVKM J.V. Parekh International School.
+        <p>This is the official website of Team 11 from SVKM J.V. Parekh International School.
             We are a commited group of Grade 10 students engaged in our IGCSE Global Perspectives
             Team Project. We worked together as a team utilizing our specifically chosen skills to help with this project.
             This website represents the result of months of research, discussion and teamwork focusing 
