--- a/aboutus.html
+++ b/aboutus.html
@@ -33,7 +33,7 @@
         <ul style="font-size: 20px; line-height: 25px;">
             <li>Darshil Prajapati - Web Designer, Poster Design, Survey, Research</li>
             <li>Pari Gada - Survey, Social Media Planning, Research</li>
-            <li>Pearl Gothi - Social Media Manager, Research</li>
+            <li>Pearl Gothi - Social Media Manager, Video Making, Research</li>
             <li>Riya Doshi - Social Media Manager, Research</li>
             <li>Aarav Kanekar - Interview, Research</li>
         </ul>
