--- a/aboutus.html
+++ b/aboutus.html
@@ -30,13 +30,47 @@
             on a global issue that we  believe is critical to our world today. </p>
 <br>
         <h1>Our Team & Contributions</h1>
-        <ul style="font-size: 20px; line-height: 25px;">
-            <li>Darshil Prajapati - Web Designer, Poster Design, Survey, Research</li>
-            <li>Pari Gada - Survey, Social Media Planning, Research</li>
-            <li>Pearl Gothi - Social Media Manager, Video Making, Research</li>
-            <li>Riya Doshi - Social Media Manager, Research</li>
-            <li>Aarav Kanekar - Interview, Research</li>
-        </ul>
+        <table border="1" style="width: 100%">
+            <tr style="height: 100px">
+                <td>img1</td>
+                <td>img2</td>
+                <td>img3</td>
+                <td>img4</td>
+                <td>img5</td>
+            </tr>
+            <tr>
+                <td>Darshil Prajapati
+                    <ul><li>Web Designer</li> 
+                        <li>Poster Design</li>
+                        <li>Survey</li>
+                        <li>Research</li>
+                    </ul>
+                </td>
+                <td>Pari Gada
+                    <ul style="line-height: 33px"><li>Survey</li> 
+                        <li>Social Media Planning</li>
+                        <li>Research</li>
+
+                    </ul>
+                </td>
+                <td>Pearl Gothi
+                    <ul style="line-height: 33px"><li>Social Media Manager</li> 
+                        <li>Video Making</li>
+                        <li>Research</li>
+                    </ul>
+                </td>
+                <td>Riya Doshi
+                    <ul style="line-height: 50px"><li>Social Media Manager</li> 
+                        <li>Research</li>
+                    </ul>
+                </td>
+                <td>Aarav Kanekar
+                    <ul style="line-height: 50px"><li>Interview</li> 
+                        <li>Research</li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
         
         <p></p>
 <br>
