--- a/aboutus.html
+++ b/aboutus.html
@@ -30,13 +30,13 @@
             on a global issue that we  believe is critical to our world today. </p>
 <br>
         <h1>Our Team & Contributions</h1>
-        <table border="1" style="width: 100%">
-            <tr style="height: 100px">
-                <td>img1</td>
-                <td>img2</td>
-                <td>img3</td>
-                <td>img4</td>
-                <td>img5</td>
+        <table  style="width: 100%">
+            <tr>
+                <td><img src="svkm.jpg" style="border-radius: 20px"></td>
+                <td><img src="svkm.jpg" style="border-radius: 20px"></td>
+                <td><img src="svkm.jpg" style="border-radius: 20px"></td>
+                <td><img src="svkm.jpg" style="border-radius: 20px"></td>
+                <td><img src="svkm.jpg" style="border-radius: 20px"></td>
             </tr>
             <tr>
                 <td>Darshil Prajapati
