--- a/aboutus.html
+++ b/aboutus.html
@@ -33,7 +33,7 @@
         <table  style="width: 100%">
             
             <tr>
-                <td>Darshil Prajapati
+                <td><h1>Darshil Prajapati</h1>
                     <ul><li>Web Designer</li> 
                         <li>Poster Design</li>
                         <li>Survey</li>
