--- a/aboutus.html
+++ b/aboutus.html
@@ -33,32 +33,32 @@
         <table  style="width: 100%">
             
             <tr>
-                <td><h1>Darshil Prajapati</h1>
+                <td><h3>Darshil Prajapati</h3>
                     <ul><li>Web Designer</li> 
                         <li>Poster Design</li>
                         <li>Survey</li>
                         <li>Research</li>
                     </ul>
                 </td>
-                <td>Pari Gada
+                <td><h3>Pari Gada</h3>
                     <ul style="line-height: 33px"><li>Survey</li> 
                         <li>Social Media Planning</li>
                         <li>Research</li>
 
                     </ul>
                 </td>
-                <td>Pearl Gothi
+                <td><h3>Pearl Gothi</h3>
                     <ul style="line-height: 33px"><li>Social Media Manager</li> 
                         <li>Video Making</li>
                         <li>Research</li>
                     </ul>
                 </td>
-                <td>Riya Doshi
+                <td><h3>Riya Doshi</h3>
                     <ul style="line-height: 50px"><li>Social Media Manager</li> 
                         <li>Research</li>
                     </ul>
                 </td>
-                <td>Aarav Kanekar
+                <td><h3>Aarav Kanekar</h3>
                     <ul style="line-height: 50px"><li>Interview</li> 
                         <li>Research</li>
                     </ul>
