--- a/interview.html
+++ b/interview.html
@@ -22,7 +22,7 @@
     
     <section>
         <center>
-        <h1>This an interview of Pravin Kanekar who is an architect</h1>
+        <h1>This is an interview of Pravin Kanekar who is an architect</h1>
         <video controls>
             <source src="interview.mp4" type="video/mp4" width="100%">
         </video>
